--- a/ProductionProject/app/src/main/res/layout/activity_register.xml
+++ b/ProductionProject/app/src/main/res/layout/activity_register.xml
@@ -29,10 +29,11 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/email"
-            android:hint="Email"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-        </com.google.android.material.textfield.TextInputEditText>
+            android:layout_height="wrap_content"
+            android:height="50dp"
+            android:hint="Email"
+            android:textSize="18dp" />
     </com.google.android.material.textfield.TextInputLayout>
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
@@ -40,10 +41,10 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/Password"
-            android:hint="Password"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-        </com.google.android.material.textfield.TextInputEditText>
+            android:layout_height="wrap_content"
+            android:height="50dp"
+            android:hint="Password"></com.google.android.material.textfield.TextInputEditText>
     </com.google.android.material.textfield.TextInputLayout>
 
     <ProgressBar
