--- a/ProductionProject/app/src/main/res/layout/activity_login.xml
+++ b/ProductionProject/app/src/main/res/layout/activity_login.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -12,46 +11,40 @@
     <TextView
         android:id="@+id/textView"
         android:layout_width="match_parent"
-        android:layout_height="62dp"
-        android:layout_marginTop="25sp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="25dp"
         android:layout_marginBottom="20dp"
         android:gravity="center"
         android:text="@string/login"
-        android:textSize="32dp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
+        android:textSize="32sp"
+        android:textStyle="bold" />
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/email"
-            android:hint="Email"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-        </com.google.android.material.textfield.TextInputEditText>
+            android:layout_height="wrap_content"
+            android:height="60dp"
+            android:hint="@string/email"
+            android:textSize="18sp" />
     </com.google.android.material.textfield.TextInputLayout>
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/Password"
-            android:hint="Password"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-        </com.google.android.material.textfield.TextInputEditText>
+            android:layout_height="wrap_content"
+            android:height="60dp"
+            android:hint="@string/password"
+            android:textSize="18sp" />
     </com.google.android.material.textfield.TextInputLayout>
-
-
     <ProgressBar
         android:id="@+id/progressBar"
-        android:visibility="gone"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:visibility="gone" />
 
     <Button
         android:id="@+id/btn_Login"
@@ -59,15 +52,14 @@
         android:layout_height="wrap_content"
         android:text="Login" />
 
-
     <TextView
-        android:textStyle="bold"
-        android:gravity="center"
-        android:textSize="24dp"
         android:id="@+id/RegisterNow"
-        android:text="@string/click_here_to_register"
-        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:gravity="center"
+        android:text="@string/click_here_to_register"
+        android:textSize="12sp"
+        android:textStyle="bold" />
 
 </LinearLayout>
