--- a/ProductionProject/app/src/main/res/layout/activity_main.xml
+++ b/ProductionProject/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:gravity="center"
     tools:context=".MainActivity">
 
     <TextView
@@ -13,11 +12,8 @@
         android:layout_height="wrap_content"
         android:text="Hello World!"
         android:id="@+id/Details"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         android:layout_marginBottom="20dp"
+        android:layout_gravity="center"
         />
 
     <Button
@@ -25,6 +21,8 @@
         android:text="@string/logout"
         android:id="@+id/logout"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"/>
+
 
 </LinearLayout>
