Starting page and bottom navigation with realtime database

--- a/ProductionProject/app/src/main/res/layout/activity_register.xml
+++ b/ProductionProject/app/src/main/res/layout/activity_register.xml
@@ -55,9 +55,10 @@
 
     <Button
         android:id="@+id/btn_Register"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Register" />
+        android:text="Register"
+        />
 
     <TextView
         android:textStyle="bold"
