--- a/ProductionProject/app/src/main/res/layout/activity_login.xml
+++ b/ProductionProject/app/src/main/res/layout/activity_login.xml
@@ -45,12 +45,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="gone" />
-
     <Button
         android:id="@+id/btn_Login"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Login" />
+        android:text="Login"
+        />
 
     <TextView
         android:id="@+id/RegisterNow"
