--- a/ProductionProject/app/src/main/res/layout/activity_start_page.xml
+++ b/ProductionProject/app/src/main/res/layout/activity_start_page.xml
@@ -5,21 +5,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".startPage">
+    tools:context=".startPage"
+    >
+
+    <ImageView
+        android:layout_width="258dp"
+        android:layout_height="134dp"
+        android:src="@drawable/logo"
+        android:layout_gravity="center"
+        android:layout_marginTop="200dp"
+        />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="Logo of App"
-        android:layout_marginTop="250dp"
-        android:textColor="@color/design_default_color_on_secondary"
-        android:textSize="24dp" />
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="125dp"
+        android:layout_marginTop="100dp"
         android:gravity="center"
         android:text="SignUp / LogIn With Email"
         android:textColor="@color/design_default_color_on_secondary"
